# cmake_tests

./: README.md
getting_start/: CMain.cpp  CMain.h  CMakeLists.txt  HelloConfig.h.in  main.cpp
